--- a/src/components/Questions/Questions.css
+++ b/src/components/Questions/Questions.css
@@ -44,6 +44,7 @@
   margin: 0;
   display: contents;
   font-size: 45px;
+  letter-spacing: 1.2px;
 }
 
 .question__text-span {
@@ -370,7 +371,7 @@
   }
 
   .question__undertext {
-    font-size: 26px;
+    font-size: 22px;
   }
 
   .question__text-span {
