--- a/src/components/Slider/Slider.css
+++ b/src/components/Slider/Slider.css
@@ -29,11 +29,12 @@
     object-fit: cover;
     height: 45vh;
     max-width: 250px;
+    max-height: 350px;
 }
 
 .details__slider {
     width: 74vw;
-    height: 65vh;
+    min-height: 65vh;
     background-color: #fff;
     display: flex;
     flex-direction: column;
@@ -41,6 +42,8 @@
     align-items: center;
     border-radius: 10px;
     margin: 0 13vw;
+    padding: 10px;
+    box-sizing: border-box;
   }
 
 @media screen and (max-width: 1700px) {
@@ -93,12 +96,10 @@
     }
 
     .details__names {
-        font-size: 35px;
-        line-height: 30px;
-        font-family: "Spslnewserifc", Helvetica, sans-serif;
-        margin: 5px 0;
-        letter-spacing: .7px;
-        transform: scaleY(.6);
+        font-size: 25px;
+        line-height: 27px;
+        font-family: "BernhardC", Helvetica, sans-serif;
+        margin: 7px 0;
         width: 80%;
     }
 
