--- a/src/components/Questions/Questions.css
+++ b/src/components/Questions/Questions.css
@@ -40,11 +40,10 @@
 }
 
 .question__undertext {
-  font-family: "Spslnewserifc", Helvetica, sans-serif;
+  font-family: "BernhardC", Helvetica, sans-serif;
   margin: 0;
   display: contents;
-  font-size: 45px;
-  letter-spacing: 1.2px;
+  font-size: 26px;
 }
 
 .question__text-span {
@@ -95,9 +94,9 @@
 }
 
 .question__span {
-  font-size: 28px;
-  line-height: 37px;
-  font-family: "Spslnewserifc", Helvetica, sans-serif;
+  font-size: 21px;
+  line-height: 28px;
+  font-family: "BernhardC", Helvetica, sans-serif;
   margin: 0;
 }
 
@@ -378,7 +377,7 @@
   }
 
   .question__undertext {
-    font-size: 22px;
+    font-size: 19px;
   }
 
   .question__text-span {
