--- a/src/components/Timer/Timer.css
+++ b/src/components/Timer/Timer.css
@@ -5,7 +5,7 @@
   padding: 150px 0;
   position: relative;
   background-color: #fef8cd;
-  color: #d2a901;
+  color: #a98701;
 }
 
 .timer__block {
