--- a/src/components/BurgerMenu/BurgerMenu.css
+++ b/src/components/BurgerMenu/BurgerMenu.css
@@ -49,6 +49,6 @@
 .burger-menu__ancor {
   text-decoration: none;
   font-size: 18px;
-  color: black;
+  color: #a98701;
   transition: color .4s;
 }
