--- a/src/components/Menu/Menu.css
+++ b/src/components/Menu/Menu.css
@@ -10,11 +10,11 @@
   position: sticky;
   top: 0;
   z-index: 4;
-  background-color: #b6b7b7;
+  background-color: #fef8cd;
 }
 
 .menu__background {
-  background-color: #b6b7b798;
+  background-color: #fef8cd;
 }
 
 .menu__links {
