--- a/src/components/BurgerMenu/BurgerMenu.css
+++ b/src/components/BurgerMenu/BurgerMenu.css
@@ -49,6 +49,6 @@
 .burger-menu__ancor {
   text-decoration: none;
   font-size: 18px;
-  color: #a98701;
+  color: #715f1e;
   transition: color .4s;
 }
