--- a/src/components/DressCode/Dresscode.css
+++ b/src/components/DressCode/Dresscode.css
@@ -18,7 +18,7 @@
   font-size: 26px;
   line-height: 40px;
   width: 40%;
-  margin: 60px 0 0;
+  margin: 60px 0 30px;
 }
 
 .dresscode__colors {
@@ -29,29 +29,6 @@
   margin: 50px 0;
 }
 
-.dresscode__color {
-  border: 30px solid transparent;
-}
-
-.dresscode__color_var_one {
-  border-bottom: 55px solid #2e5123;
-}
-
-.dresscode__color_var_two {
-  border-top: 55px solid #2e5123;
-}
-
-.dresscode__color_var_three {
-  border-bottom: 55px solid #2e5123;
-}
-
-.dresscode__color_var_four {
-  border-top: 55px solid #2e5123;
-}
-
-.dresscode__color_var_five {
-  border-bottom: 55px solid #2e5123;
-}
 
 .dresscode__link {
   text-decoration: none;
@@ -104,12 +81,6 @@
     width: 600px;
     height: 600px;
     top: -200px;
-  }
-
-  .dresscode__birds {
-    width: 800px;
-    top: 200px;
-    left: 100px;
   }
 }
 
