--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -72,7 +72,7 @@
     box-sizing: border-box;
     padding: 0;
     width: 100%;
-    height: calc(100vh - 100px);
+    height: 100vh;
     background-color: #fef8cd;
     position: relative;
   }
