--- a/src/components/SliderDress/SliderDress.css
+++ b/src/components/SliderDress/SliderDress.css
@@ -43,7 +43,7 @@
     .dresscode__image-dress {
         width: 20vw;
         height: 55vh;
-        margin: 0 0 40px;
+        margin: 20px 0 30px;
     }
 }
 
