--- a/src/components/Questions/Questions.css
+++ b/src/components/Questions/Questions.css
@@ -6,6 +6,7 @@
   position: relative;
   background-color: #fbe9dc;
   color: #c46017;
+  font-weight: bold;
 }
 
 .question__bloks {
@@ -44,6 +45,7 @@
   margin: 0;
   display: contents;
   font-size: 26px;
+  font-weight: 200;
 }
 
 .question__text-span {
@@ -98,6 +100,7 @@
   line-height: 28px;
   font-family: "BernhardC", Helvetica, sans-serif;
   margin: 0;
+  font-weight: 200;
 }
 
 .question__text-span {
@@ -134,7 +137,7 @@
   border-radius: 3.5px;
   cursor: pointer;
   color: white;
-  font-weight: 200;
+  font-weight: bold;
 }
 
 .question__button:disabled {
