--- a/src/components/Slider/Slider.css
+++ b/src/components/Slider/Slider.css
@@ -74,6 +74,7 @@
         font-size: 18px;
         line-height: 20px;
         width: 90%;
+        font-weight: bold;
         margin: 0;
     }
 
